--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+    <div id="app">
+
+    </div>
+    
+
 
     <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
+      // importing Vue.js Library
+      const Vue = require('./vue.js');
+      // importing backend
+      // require('./renderer.js')
+      // Vue.js manipulation
+      new Vue({
+        el:'#app',
+        data(){
+          return {
+            
+          }
+        }
+      });
     </script>
   </body>
 </html>
